# vds

./: .gitignore  CNAME  Cargo.toml  LICENSE-APACHE2  LICENSE-MIT  README.MD  README.md  index.html  rust-toolchain  vds-c429ff23e1b05dbe.js
.cargo/: config.toml
.github/workflows/: ci.yml  deploy_github_pages.yml
assets/: manifest.json
assets/macos_bundle/: AppIcon.icns  DiskImageIcon.icns  Info.plist  build_app_bundle.sh  build_dmg.sh
src/: backend_panel.rs  lib.rs  main.rs  shader.wgsl  slice_renderer.rs  texture.rs  webgpu_window.rs  wrap_app.rs
src/apps/: mod.rs  ray_marching_renderer.rs  ray_marching_shader.wgsl  shader.wgsl  slice_renderer.rs  slice_renderer_shader.wgsl  texture.rs
src/io/: common.rs  import.rs  mod.rs
