[package]
name = "vds"
version = "0.0.1"
authors = ["Frederic Laing <frederic.laing.development@gmail.com>"]
edition = "2021"

[features]
default = ["wgpu", "persistence"]

persistence = ["eframe/persistence", "egui/persistence", "serde"]
serde = ["dep:serde", "egui/serde"]

wgpu = ["eframe/wgpu", "bytemuck"]


[dependencies]
chrono = { version = "0.4", default-features = false, features = [
  "js-sys",
  "wasmbind",
] }
egui = { version = "0.22.0", features = [
  "extra_debug_asserts",
] }
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

log = "0.4"
bytemuck = { version = "1.7.1", optional = true }
anyhow = "1.0"
cgmath = "0.18"
half = "2.3.1"
rfd = "0.11"
regex = "1.8.4"

# feature "persistence":
serde = { version = "1", optional = true, features = ["derive"] }


# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.61", features = ["Window", "Url", "File", "Blob", "HtmlAnchorElement", "BlobPropertyBag", "FilePropertyBag"] }
js-sys = "0.3"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
